--- a/bridge.ini.example
+++ b/bridge.ini.example
@@ -4,12 +4,8 @@
 hoppie_logon = 
 
 # API Key from the SI pilot portal
-sai_logon = 
+sayintentions_api_key =  
 
 #ID NOT Username :)
-
 simbrief_id = your simbrief simbrief_id
 
-# Do not change 
-sai_url = mep.sayintentions.ai
-hoppie_url = www.hoppie.nl
