--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ bridge.spec
 __pycache__/hash_userid.cpython-311.pyc
 __pycache__/colors.cpython-311.pyc
 bridge.spec
+~$bridge_architecture.pptx
+bridge_architecture.pptx
